# GLow

./: .gitignore  16_visualize_results.ipynb  8_visualize_results.ipynb  FL_hydra_main.py  FL_visualize_results.ipynb  README.md  client.py  cnl_pytorch.py  dataset.py  deps.req  draw_graphs.ipynb  exec.sbatch  generate_topology.ipynb  hydra_main.py  main.py  model.py  mult_exp.sh  pyproject.toml  reqs.txt  requirements.txt  server.py  sing_exp.sh
conf/: base.yaml
conf/topologies/graph_16_2/: base.yaml  runtime.yaml
conf/topologies/graph_8_2/: base.yaml  graph_0.yaml  runtime.yaml
conf/topologies/poison_example/: ring_8.yaml  ring_8_runtime.yaml
custom_strategies/: GLow_strategy.py  cli_map_FedAvg.py  fedavg.py  gossip_strategy.py  topology_based_GL.py
flwr_lib_modifications/: aggregate.py  app.py
outputs/2026-02-04/16-25-13/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-04/16-26-23/.hydra/: config.yaml  hydra.yaml
visualization/: 16_visualize_results.ipynb  8_visualize_results.ipynb  CNL_and_FL_visualize_results.ipynb  FL_visualize_results.ipynb  single_visualize_results.ipynb
